// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly the graph and legends 1`] = `
<div
  className="project-activity-layout-page-main-inner boxed-group boxed-group-inner"
>
  <ProjectActivityGraphsHeader
    addCustomMetric={[Function]}
    graph="overview"
    metrics={
      Array [
        Object {
          "key": "code_smells",
          "name": "Code Smells",
          "type": "INT",
        },
      ]
    }
    metricsTypeFilter={null}
    updateGraph={[Function]}
  />
  <GraphsHistory
    analyses={
      Array [
        Object {
          "date": "2016-10-27T16:33:50+0200",
          "events": Array [
            Object {
              "category": "VERSION",
              "key": "E1",
              "name": "6.5-SNAPSHOT",
            },
          ],
          "key": "A1",
        },
        Object {
          "date": "2016-10-27T12:21:15+0200",
          "events": Array [],
          "key": "A2",
        },
        Object {
          "date": "2016-10-26T12:17:29+0200",
          "events": Array [
            Object {
              "category": "VERSION",
              "key": "E2",
              "name": "6.4",
            },
            Object {
              "category": "OTHER",
              "key": "E3",
              "name": "foo",
            },
          ],
          "key": "A3",
        },
      ]
    }
    eventFilter=""
    graph="overview"
    graphEndDate={null}
    graphStartDate={null}
    leakPeriodDate="2017-05-16T13:50:02+0200"
    measuresHistory={
      Array [
        Object {
          "history": Array [
            Object {
              "date": 2016-10-26T10:17:29.000Z,
              "value": "2286",
            },
            Object {
              "date": 2016-10-27T10:21:15.000Z,
              "value": "1749",
            },
            Object {
              "date": 2016-10-27T14:33:50.000Z,
              "value": "500",
            },
          ],
          "metric": "code_smells",
        },
      ]
    }
    metricsType="INT"
    removeCustomMetric={[Function]}
    series={
      Array [
        Object {
          "data": Array [
            Object {
              "x": 2016-10-26T10:17:29.000Z,
              "y": 2286,
            },
            Object {
              "x": 2016-10-27T10:21:15.000Z,
              "y": 1749,
            },
            Object {
              "x": 2016-10-27T14:33:50.000Z,
              "y": 500,
            },
          ],
          "name": "code_smells",
          "translatedName": "Code Smells",
          "type": "INT",
        },
      ]
    }
    updateGraphZoom={[Function]}
    updateSelectedDate={[Function]}
  />
  <GraphsZoom
    graphEndDate={null}
    graphStartDate={null}
    leakPeriodDate="2017-05-16T13:50:02+0200"
    loading={false}
    metricsType="INT"
    series={
      Array [
        Object {
          "data": Array [
            Object {
              "x": 2016-10-26T10:17:29.000Z,
              "y": 2286,
            },
            Object {
              "x": 2016-10-27T10:21:15.000Z,
              "y": 1749,
            },
            Object {
              "x": 2016-10-27T14:33:50.000Z,
              "y": 500,
            },
          ],
          "name": "code_smells",
          "translatedName": "Code Smells",
          "type": "INT",
        },
      ]
    }
    showAreas={false}
    updateGraphZoom={[Function]}
  />
</div>
`;

exports[`should render correctly with filter history on dates 1`] = `
Object {
  "graphEndDate": null,
  "graphStartDate": "2016-10-27T12:21:15+0200",
  "graphs": Array [
    Array [
      Object {
        "data": Array [
          Object {
            "x": 2016-10-26T10:17:29.000Z,
            "y": 2286,
          },
          Object {
            "x": 2016-10-27T10:21:15.000Z,
            "y": 1749,
          },
          Object {
            "x": 2016-10-27T14:33:50.000Z,
            "y": 500,
          },
        ],
        "name": "code_smells",
        "translatedName": "Code Smells",
        "type": "INT",
      },
    ],
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "x": 2016-10-26T10:17:29.000Z,
          "y": 2286,
        },
        Object {
          "x": 2016-10-27T10:21:15.000Z,
          "y": 1749,
        },
        Object {
          "x": 2016-10-27T14:33:50.000Z,
          "y": 500,
        },
      ],
      "name": "code_smells",
      "translatedName": "Code Smells",
      "type": "INT",
    },
  ],
}
`;

exports[`should show that there is no history data 1`] = `
<div
  className="project-activity-layout-page-main-inner boxed-group boxed-group-inner"
>
  <ProjectActivityGraphsHeader
    addCustomMetric={[Function]}
    graph="overview"
    metrics={
      Array [
        Object {
          "key": "code_smells",
          "name": "Code Smells",
          "type": "INT",
        },
      ]
    }
    metricsTypeFilter={null}
    updateGraph={[Function]}
  />
  <div
    className="project-activity-graph-container"
  >
    <div
      className="note text-center"
    >
      component_measures.no_history
    </div>
  </div>
  <GraphsZoom
    graphEndDate={null}
    graphStartDate={null}
    leakPeriodDate="2017-05-16T13:50:02+0200"
    loading={false}
    metricsType="INT"
    series={
      Array [
        Object {
          "data": Array [],
          "name": "code_smells",
          "translatedName": "Code Smells",
          "type": "INT",
        },
      ]
    }
    showAreas={false}
    updateGraphZoom={[Function]}
  />
</div>
`;

exports[`should show that there is no history data 2`] = `
<div
  className="project-activity-layout-page-main-inner boxed-group boxed-group-inner"
>
  <ProjectActivityGraphsHeader
    addCustomMetric={[Function]}
    graph="custom"
    metrics={
      Array [
        Object {
          "key": "code_smells",
          "name": "Code Smells",
          "type": "INT",
        },
      ]
    }
    metricsTypeFilter={null}
    selectedMetrics={
      Array [
        "code_smells",
      ]
    }
    updateGraph={[Function]}
  />
  <div
    className="project-activity-graph-container"
  >
    <div
      className="note text-center"
    >
      project_activity.graphs.custom.no_history
    </div>
  </div>
  <GraphsZoom
    graphEndDate={null}
    graphStartDate={null}
    leakPeriodDate="2017-05-16T13:50:02+0200"
    loading={false}
    metricsType="INT"
    series={
      Array [
        Object {
          "data": Array [
            Object {
              "x": 2016-10-26T10:17:29.000Z,
              "y": NaN,
            },
          ],
          "name": "code_smells",
          "translatedName": "Code Smells",
          "type": "INT",
        },
      ]
    }
    showAreas={false}
    updateGraphZoom={[Function]}
  />
</div>
`;
